[package]
name = "texturelab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
image = "0.24.6"
ignore = "0.4.20"
regex = "1.7.3"
num_cpus = "1.15.0"
globset = "0.4.10"
serde = "1.0.163"